# frxp

./: .gitignore  LICENSE  README.md  pyproject.toml  vae_models.py  vae_train.py
Utils/: coord_converter.py  fractal_calcs.py  image_manager.py  seed_manager.py
backend/: pyproject.toml
backend/frxp/cli/: main.py  renderer.py
backend/frxp/core/: coord_converter.py  fractal_calcs.py  lch_color.py  normalize_map.py  normalize_maps.py
backend/frxp/core/data_managers/: image_manager.py  seed_manager.py
backend/frxp/web_app/: api_app.py  app.py  celery_app.py  celery_worker.py
backend/tests/: batch_test.yaml  test_api.py  test_cli.py  test_cli_integration.py  test_image_manager.py  test_seed_manager.py
configs/: batch_test.yaml
docs/: fractal-math-guide.md  julia_set_math.md
fractal_explorer_vae/cli/: main.py
fractal_explorer_vae/core/data_managers/: image_manager.py  seed_manager.py
frontend/fractal-app/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/fractal-app/src/: App.jsx  Frxp3D.jsx  noiseUtils.js  sceneConfig.js
frontend/fractal-app/src/components/: FractalMesh.jsx  MovingSun.jsx
frontend/fractal-app/src/configs/: noiseConfig.js  sceneConfig.js
frontend/fractal-app/src/utils/: noiseUtils.js
src/core/: coord_converter.py  coord_generator.py
src/core/data_managers/: seed_manager.py
tests/: test_cli.py  test_image_manager.py  test_seed_manager.py
